--- a/geb.cabal
+++ b/geb.cabal
@@ -42,6 +42,9 @@ test-suite geb-test
                      , geb
                      , tasty
                      , tasty-hunit
+                     , temporary
+                     , directory
+                     , filepath
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
