--- a/geb.cabal
+++ b/geb.cabal
@@ -15,6 +15,8 @@ library
   hs-source-dirs:      src
   exposed-modules:     Geb.Web
                      , Geb.Store
+                     , Geb.Store.Raw
+  other-modules:       Geb.Utils
   build-depends:       base >= 4.7 && < 5
                      , Spock
                      , filestore
