--- a/geb.cabal
+++ b/geb.cabal
@@ -26,6 +26,7 @@ library
                      , transformers
                      , mtl
                      , exceptions
+                     , lucid
   default-language:    Haskell2010
                      
 executable geb
