--- a/geb.cabal
+++ b/geb.cabal
@@ -48,6 +48,7 @@ test-suite geb-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Test.hs
+  other-modules:       Geb.StoreTest
   build-depends:       base
                      , geb
                      , tasty
